tests/paczka1/fuzzy1/70820229.err
Error in line 18: QdmCKQgytzG S927 53,2
Error in line 27: ZT4ki A830 35,7
